small changes to the css in mobile and got everything to align correctly.

--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,15 @@ h2 {
 
 .topCard h2, .topCard p {
   margin-bottom: 1rem;
-  font-size: 2rem; /* Smaller for responsiveness */
+  
+}
+
+.topCard h2 {
+  font-weight: 600;
+}
+
+.topCard p {
+  padding: 10px;
 }
 
 
@@ -194,6 +202,7 @@ h2 {
 .topCard ul li {
   flex: 1 1 calc(33.333% - 20px); /* Adjust for spacing */
   margin: 10px;
+  font-size: 1.5rem;
   text-align: center;
   display: flex;
   flex-direction: column; /* Stack image and text vertically */
@@ -203,7 +212,7 @@ h2 {
 }
 
 .topCard ul li img {
-  width: 60%; /* Ensure images fit within the li */
+  width: 7.5rem; /* Ensure images fit within the li */
   height: auto;
   max-width: 250px; /* Ensure images don't get too large */
   display: block;
@@ -410,7 +419,7 @@ Link {
   .topCard {
       width: 100vw;  /* Full width for small screens */
       margin-top: 28rem;    /* Remove margin that may cause overflow */
-      padding: 10px; /* Adjust padding if needed */
+      padding: 1rem; /* Adjust padding if needed */
   }
   
   /* Adjust other card styles if necessary */
@@ -426,8 +435,12 @@ Link {
     }
 
   .topCard p {
-        font-size: 0.9rem; /* Smaller text font size */
+        font-size: 0.9rem;
+        padding-top: 1rem; /* Smaller text font size */
     }
+  .topCard h3 {
+    padding-top: 4rem;
+  }
 }
 
 
@@ -462,17 +475,23 @@ Link {
   .topCard p {
     font-size: 1rem;
     margin: 0;
+    padding: 2rem;
   }
 
   .topCard h2 {
     font-size: 1.5rem;
     margin: 0;
+    position: relative;
+    top: 2rem;
   }
   
   .topCard h1 {
     font-size: 1rem; /* Reduce font size for smaller screens */
 }
 .topCard ul li {
+  position: relative;
+  left: .3rem;
+  margin: 1px;
   font-size: .5rem; /* Show two items per row on smaller screens */
 }
 .topCard ul li img {
